# POagent

./: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py  worker.py
backend/app/api/: routes.py
backend/app/services/: job_runner.py  logger.py  ocr.py  preprocess.py
docs/: architecture.md
frontend/: app.js  index.html  styles.css
scripts/: init_db.py  run.sh
