[project]
name = "po-local-ocr"
version = "0.1.0"
description = "Local PO OCR web app with queue and human-in-the-loop confirmation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "aiofiles>=24.1",
  "pillow>=10.3",
  "opencv-python-headless>=4.10",
  "torch>=2.3",
  "transformers>=4.44",
  "accelerate>=0.33",
]

[tool.setuptools]
py-modules = []
